# aarch32

./: .gitignore  Cargo.toml  justfile  tests.sh
.cargo/: config.toml
.github/workflows/: build.yml
aarch32-cpu/: CHANGELOG.md  Cargo.toml  README.md
aarch32-cpu/src/: asmv4.rs  lib.rs  mmu.rs  stacks.rs
aarch32-cpu/src/generic_timer/: el2.rs
aarch32-cpu/src/register/: cpsr.rs  dacr.rs  iciallu.rs  mod.rs  sctlr.rs  ttbr0.rs
aarch32-cpu/src/register/armv8r/: hcptr.rs  hcr.rs  hsr.rs
aarch32-rt/: CHANGELOG.md  Cargo.toml  README.md  link.x
aarch32-rt-macros/: CHANGELOG.md  README.md
aarch32-rt-macros/src/: lib.rs
aarch32-rt/src/: lib.rs  stacks.rs
aarch32-rt/src/arch_v4/: abort.rs  hvc.rs  interrupt.rs  mod.rs  svc.rs  undefined.rs
aarch32-rt/src/arch_v7/: abort.rs  hvc.rs  interrupt.rs  mod.rs  svc.rs  undefined.rs
aarch32-rt/src/arch_v8_hyp/: abort.rs  hvc.rs  interrupt.rs  mod.rs  svc.rs  undefined.rs
arm-targets/: README.md
arm-targets/src/: lib.rs
examples/mps3-an536/: Cargo.toml  README.md  commands.gdb  rust-toolchain.toml
examples/mps3-an536-el2/: Cargo.toml  README.md  build.rs  memory.x
examples/mps3-an536-el2/.cargo/: config.toml
examples/mps3-an536-el2/reference/: abt-exception-a32-thumbv8r-none-eabihf.out  abt-exception-t32-armv8r-none-eabihf.out  generic-timer-armv8r-none-eabihf.out  hello-thumbv8r-none-eabihf.out  hvc-t32-armv8r-none-eabihf.out  prefetch-exception-a32-thumbv8r-none-eabihf.out  prefetch-exception-t32-thumbv8r-none-eabihf.out  svc-a32-thumbv8r-none-eabihf.out  svc-t32-armv8r-none-eabihf.out  undef-exception-a32-thumbv8r-none-eabihf.out  undef-exception-t32-thumbv8r-none-eabihf.out
examples/mps3-an536-el2/src/: lib.rs
examples/mps3-an536-smp/: Cargo.toml  README.md  commands.gdb  memory.x  rust-toolchain.toml
examples/mps3-an536-smp/.cargo/: config.toml
examples/mps3-an536-smp/reference/: dual-core-ping-pong.rs  generic_timer-armv8r-none-eabihf.out  gic-armv8r-none-eabihf.out  smp-test-thumbv8r-none-eabihf.out
examples/mps3-an536-smp/src/: lib.rs
examples/mps3-an536/reference/: el2_hello-thumbv8r-none-eabihf.out  generic_timer_irq-thumbv8r-none-eabihf.out  gic-map-armv8r-none-eabihf.out  gic-map-thumbv8r-none-eabihf.out  gic-priority-ceiling-thumbv8r-none-eabihf.out  gic-unified-irq-thumbv8r-none-eabihf.out  hvc-t32-armv8r-none-eabihf.out  registers-thumbv8r-none-eabihf.out  svc-a32-thumbv8r-none-eabihf.out
examples/mps3-an536/src/: lib.rs
examples/versatileab/: Cargo.toml  README.md  memory.x  rust-toolchain.toml
examples/versatileab/.cargo/: config.toml
examples/versatileab/reference/: fpu-test-thumbv7r-none-eabi.out  hello-armv7r-none-eabihf.out  hello-thumbv7a-none-eabi.out  hello-thumbv7r-none-eabihf.out  interrupt-armv6-none-eabi.out  prefetch-exception-a32-armv6-none-eabihf.out  registers-armv6-none-eabi.out  registers-armv7a-none-eabi.out  registers-armv7r-none-eabihf.out  registers-thumbv7r-none-eabi.out  svc-a32-thumbv7r-none-eabi.out  svc-t32-thumbv7r-none-eabihf.out  syscall-armv5te-none-eabi.out
examples/versatileab/src/: lib.rs  mmu.rs
