[package]
authors = [
	"Jonathan Pallant <jonathan.pallant@ferrous-systems.com>",
	"The Embedded Devices Working Group Arm Team <arm@teams.rust-embedded.org>"
]
default-run = "hello"
description = "Examples for the QEMU Versatile Application baseboard device (Arm Cortex-A8 or Arm Cortex-R5)"
edition = "2024"
homepage = "https://github.com/rust-embedded/aarch32"
license = "MIT OR Apache-2.0"
name = "versatileab"
publish = false
readme = "README.md"
repository = "https://github.com/rust-embedded/aarch32.git"
version = "0.0.0"

[dependencies]
aarch32-cpu = { path = "../../aarch32-cpu", features = ["critical-section-single-core"] }
aarch32-rt = { path = "../../aarch32-rt" }
arbitrary-int = "2.1.1"
derive-mmio = "0.6.1"
libm = "0.2.15"
pl190-vic = "0.1.0"
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
semihosting = { version = "0.1.18", features = ["stdio"] }

[build-dependencies]
arm-targets = { version = "0.4.0", path = "../../arm-targets" }

[features]
eabi-fpu = ["aarch32-rt/eabi-fpu"]
fpu-d32 = ["aarch32-rt/fpu-d32"]
